--- a/_source/_includes/sidebar.html
+++ b/_source/_includes/sidebar.html
@@ -89,7 +89,7 @@
     <h3 class="Sidebar-title">Use Cases</h3>
     <ul class="Sidebar-nav">{% assign documents = site.use_cases | sort: 'weight' %}{% for document in documents %}{% unless document.id contains '/index' %}{% continue %}{% endunless %}
       <li{% if document.url == page.url%} class="is-active"{% endif %}>
-        <a href="{{ document.url | remove: '/index' | append: '/'}}">{{ document.title }}</a>
+        <a href="{% if document.id contains '/index' %}{{ document.url | remove: '/index.html' | append: '/' }}{% else %}{{ document.link }}{% endif %}">{{ document.title }}</a>
       </li>{% endfor %}
     </ul>
 
@@ -116,7 +116,7 @@
         </ul>{% endif %}
       </li>{% assign documents = site.reference %}{% for document in documents %}{% if document.id contains "docs/api/getting_started" %}{% continue %}{% endif %}{% if document.id contains "docs/api/resources" %}{% continue %}{% endif %}{% if document.id contains "reference/api_reference" %}{% continue %}{% endif %}{% if document.id contains "reference/getting_started" %}{% continue %}{% endif %}{% if document.id contains "reference/authentication_reference" %}{% continue %}{% endif %}
       <li{% if document.title == page.title or page.title contains document.title %} class="is-active"{% endif %}>
-        <a href="{% if document.id contains '/index' %}{{ document.url | remove: '/index' | append: '/'}}{% else %}{{ document.link }}{% endif %}">{{ document.title }}</a>
+        <a href="{% if document.id contains '/index' %}{{ document.url | remove: '/index.html' | append: '/'}}{% else %}{{ document.link }}{% endif %}">{{ document.title }}</a>
       </li>{% endfor %}
     </ul>
 
@@ -126,7 +126,7 @@
       {% for element in elements %}
       {% unless element.id contains '/index' %}{% continue %}{% endunless %}
       <li{% if element.title == page.title%} class="is-active"{% endif %}>
-        <a href="{{ element.url | remove: '/index' | append: '/' }}">{{ element.title }}</a>
+        <a href="{{ element.url | remove: '/index.html' | append: '/' }}">{{ element.title }}</a>
       </li>
       {% endfor %}
     </ul>
